8191006: hsdis disassembler plugin does not compile with binutils 2.29+

Update call to disassembler() function to match new signature used by Binutils

Reviewed-by: gromero, kvn