src/utils/hsdis/hsdis.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -50,12 +50,15 @@
 */
 
 #include <config.h> /* required by bfd.h */
-#include <libiberty.h>
-#include <bfd.h>
-#include <dis-asm.h>
+#include <errno.h>
 #include <inttypes.h>
 #include <string.h>
-#include <errno.h>
+
+#include <libiberty.h>
+#include <bfd.h>
+#include <bfdver.h>
+#include <dis-asm.h>
+
 #include "hsdis.h"
 
 #ifndef bool
@@ -335,7 +338,10 @@ static void setup_app_data(struct hsdis_app_data* app_data,
 
   /* Finish linking together the various callback blocks. */
   app_data->dinfo.application_data = (void*) app_data;
-  app_data->dfn = disassembler(native_bfd);
+  app_data->dfn = disassembler(bfd_get_arch(native_bfd),
+                               bfd_big_endian(native_bfd),
+                               bfd_get_mach(native_bfd),
+                               native_bfd);
   app_data->dinfo.print_address_func = hsdis_print_address_func;
   app_data->dinfo.read_memory_func = hsdis_read_memory_func;
 
